--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "DaisyXMusic",
+  "name": "AlinaXMusic",
   "logo": "https://telegra.ph/file/36ff1b571aa11df5812de.jpg",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
@@ -81,7 +81,7 @@
     "DURATION_LIMIT": {
       "description": "Max audio duration limit for downloads (minutes).",
       "required": true,
-      "value": "10"
+      "value": "30"
     }
   }
 }
