--- a/example.env
+++ b/example.env
@@ -7,5 +7,5 @@ SUDO_USERS=6848223695 # List of user IDs separated by space
 DURATION_LIMIT=100 # in minutes (default: 7)
 ARQ_API_KEY=SMIYVL-BIHQXM-KMDVXJ-IQAURJ-ARQ
 UPDATES_CHANNEL=about_tosuu
-BG_IMAGE=
+BG_IMAGE=https://te.legra.ph/file/3472b977c24b3428417f9.jpg
 
