--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-pyrogram
-tgcrypto
-pytgcalls==2.1.0
+git+https://github.com/pyrogram/pyrogram@master
+TgCrypto==1.2.2
+pytgcalls[pyrogram]==3.0.0.dev19
 python-dotenv
-yt-dlp
-youtube-search-python
+youtube_dl
+youtube_search_python
+youtube-dl
+pytube
+youtube_search
 requests
+sqlalchemy==1.3.23
+psycopg2-binary 
+ffmpeg-python
+moviepy
 aiohttp
 aiofiles
-asyncio
-youtube-search
-ffmpeg-python
 pillow
 python-arq
 future
