--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 git+https://github.com/pyrogram/pyrogram@master
 TgCrypto==1.2.2
-pytgcalls[pyrogram]==3.0.0.dev19
+py-tgcalls==0.9.7
 python-dotenv
 youtube_dl
 youtube_search_python
@@ -8,7 +8,6 @@ youtube-dl
 pytube
 youtube_search
 requests
-sqlalchemy==1.3.23
 psycopg2-binary 
 ffmpeg-python
 moviepy
